# tartup-friendly

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  example.md  firestore.indexes.json  pyproject.toml  requirements.txt
scripts/: deploy.sh
src/: config.py  main.py
src/api/middleware/: auth.py  rate_limiter.py
src/api/routes/: documents.py  health.py
src/models/: schemas.py
src/services/: document_ai.py  firestore.py  pdf_processor.py  storage.py
terraform/: main.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_auth.py  test_documents.py  test_health.py
